--- a/morton/Dockerfile
+++ b/morton/Dockerfile
@@ -1,22 +1,19 @@
-FROM fenandosr/ubuntu:iggy
+FROM phusion/passenger-customizable:latest
 MAINTAINER Fernando Rivas <fenandos@hotmail.com>
 
-RUN sed -i 's#http://archive.ubuntu.com/#http://tw.archive.ubuntu.com/#' /etc/apt/sources.list
+# Set correct environment variables.
+ENV HOME /root
+
+# Use baseimage-docker's init process.
+CMD ["/sbin/my_init"]
 
 # built-in packages
 RUN apt-get update \
-    && sh -c "echo 'deb http://download.opensuse.org/repositories/home:/Horst3180/xUbuntu_16.04/ /' >> /etc/apt/sources.list.d/arc-theme.list" \
-    && curl -SL http://download.opensuse.org/repositories/home:Horst3180/xUbuntu_16.04/Release.key | apt-key add - \
-    && add-apt-repository ppa:fcwu-tw/ppa \
-    && apt-get update \
     && apt-get install -y --no-install-recommends --allow-unauthenticated \
         supervisor net-tools \
         lxde x11vnc xvfb \
-        gtk2-engines-murrine ttf-ubuntu-font-family \
-        libreoffice firefox \
-        fonts-wqy-microhei \
-        language-pack-zh-hant language-pack-gnome-zh-hant firefox-locale-zh-hant libreoffice-l10n-zh-tw \
-        nginx \
+        ttf-ubuntu-font-family \
+        firefox \
         python-pip python-dev build-essential \
         libc6-dev libpango1.0-dev libx11-dev libgl1-mesa-dev \
         xorg-dev libgtk2.0-dev gtk2-engines-pixbuf libgtkglext1-dev rlwrap \
@@ -36,9 +33,6 @@ ADD image/usr/lib/web/requirements.txt /tmp/
 RUN pip install --upgrade pip
 RUN pip install setuptools wheel && pip install -r /tmp/requirements.txt
 ADD image /
-
-#RUN mkdir ~/.vnc
-#RUN x11vnc -storepasswd abcd1234 ~/.vnc/passw
 
 EXPOSE 80
 WORKDIR /root
